Created class QuestionsAnswers to contain the questions, answers, and the count of how many questions the user gets right. Deleted variable of wrongAnswer because I didn't use it.
Used a switch case to determine which question to display based on a random number, and a bool to control if the user wants to answer more questions or not.

--- a/Midterm Practical - Software Engineering/Midterm Practical - Software Engineering.vcxproj.filters
+++ b/Midterm Practical - Software Engineering/Midterm Practical - Software Engineering.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="Midterm Practical - Software Engineering.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="QuestionsAnswers.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="QuestionsAnswers.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
