--- a/Midterm Practical - Software Engineering/Midterm Practical - Software Engineering.vcxproj
+++ b/Midterm Practical - Software Engineering/Midterm Practical - Software Engineering.vcxproj
@@ -128,6 +128,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Midterm Practical - Software Engineering.cpp" />
+    <ClCompile Include="QuestionsAnswers.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="QuestionsAnswers.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
